# glass-epsr

./: .gitignore  AGENTS.md  CLAUDE.md  EXPERIMENTS.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: methods.tex  removed_rlpf.md  rings.md
glass/: cli.py  default_params.yaml  diffusion.py  experiment.py
glass/algorithms/: __init__.py
glass/algorithms/crn/: __init__.py  _keating_numba.py  initialize.py  network.py  relax.py  transposition.py  www.py
glass/cli/: __init__.py  __main__.py  analysis.py  crn.py  denoise.py  generate.py  initialize.py  metrics.py  refine.py  tersoff_stats.py  train.py
glass/descriptors/: __init__.py  acsf.py  entropy.py
glass/diffusion/: __init__.py  annealing.py  iterated.py  profiler.py  rewards.py  rlpf.py  sampling.py  schedules.py
glass/lit/datamodules/: __init__.py  structure_spec.py
glass/lit/functions/: get_atoms.py
glass/lit/modules/: __init__.py  coord_guidance.py  differentiable_adf.py  differentiable_nd.py  differentiable_rdf.py  differentiable_xrd.py  forward.py  guidance.py  likelihood.py  prior.py  tersoff_guidance.py
glass/metrics/: __init__.py  _rings_numba.py  advanced.py  core.py  errors.py  geometric.py  rings.py  sq.py  structural.py  tersoff.py  utils.py  voronoi.py
glass/nn/: __init__.py  basis.py  cluster.py  mgn.py  mlp.py
glass/potentials/keating/: __init__.py  ase_calc.py  params.py  potential.py
glass/potentials/tersoff/: cli.py  neighbors.py  potential.py
glass/potentials/torch_tersoff/: __init__.py  neighbors.py  potential.py
glass/utils/: atoms.py  atoms_utils.py  packing.py
scripts/: generate_from_init.py  hpo_entropy_v1.py  hpo_generate.py  hpo_phys_v4.py  hpo_phys_v5.py  hpo_phys_v6.py  hpo_phys_v7.py  hpo_unified.py  rlpf_finetune.py  run_glass.sh  test.sh
tests/: test_acsf_guidance.py  test_annealing.py  test_coord_guidance.py  test_crn_density.py  test_crn_network.py  test_crn_smoke.py  test_diffusion.py  test_experiment.py  test_generation.py  test_hpo_objective.py  test_inference.py  test_initialize_packing.py  test_iterated.py  test_keating.py  test_losses.py  test_metrics.py  test_prior.py  test_profiler.py  test_rings.py  test_rlpf.py  test_sampling_corrector.py  test_schedules.py  test_tersoff.py  test_tersoff_guidance.py  test_tersoff_metrics.py
tests/data/: Si_2.5_00.xyz  tersoff.py  tersoff.rst
torch_tersoff/: ase_calc.py  params.py
