[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "glass"
version = "0.1.0"
description = "Generative learning for atomic structure reconstruction, with a PyTorch Tersoff potential for Si."
requires-python = ">=3.10"
dependencies = [
    "ase>=3.23",
    "click>=8",
    "numpy>=1.23",
    "torch>=2.0",
    "lightning>=2.0",
    "torch-geometric>=2.3",
    "scikit-learn>=1.2",
    "scipy>=1.10",
    "DebyeCalculator",
    "tensorboard",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=7"]
plot = [
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "tensorboard>=2.12",
]
hpo = ["optuna>=3.5"]
fast = ["numba>=0.59"]

[project.scripts]
glass = "glass.cli:glass"

[tool.setuptools.packages.find]
where = ["."]
include = ["glass*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
